--- a/251_300.md
+++ b/251_300.md
@@ -346,9 +346,601 @@ Therefore, Option D is the correct solution.
 
 </details>
 
+<details>
+  <summary>Question 261</summary>
 
+A company recently announced the deployment of its retail website to a global audience. The website runs on multiple Amazon EC2 instances behind an Elastic Load Balancer. The instances run in an Auto Scaling group across multiple Availability Zones. The company wants to provide its customers with different versions of content based on the devices that the customers use to access the website. Which combination of actions should a solutions architect take to meet these requirements? (Choose two.)
 
+-   [ ] A. Configure Amazon CloudFront to cache multiple versions of the content.
+-   [ ] B. Configure a host header in a Network Load Balancer to forward traffic to different instances.
+-   [ ] C. Configure a Lambda@Edge function to send specific objects to users based on the User-Agent header.
+-   [ ] D. Configure AWS Global Accelerator. Forward requests to a Network Load Balancer (NLB). Configure the NLB to set up host-based routing to different EC2 instances.
+-   [ ] E. Configure AWS Global Accelerator. Forward requests to a Network Load Balancer (NLB). Configure the NLB to set up path-based routing to different EC2 instances.
+   
+</details>
 
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Configure Amazon CloudFront to cache multiple versions of the content.
+-   [ ] C. Configure a Lambda@Edge function to send specific objects to users based on the User-Agent header.
+   
+Why these are the correct answers:
+
+A. Configure Amazon CloudFront to cache multiple versions of the content.
+
+-   [ ] CloudFront can cache different versions of content.
+   
+C. Configure a Lambda@Edge function to send specific objects to users based on the User-Agent header.
+
+-   [ ] Lambda@Edge allows customization of content delivery based on headers like User-Agent.
+   
+Why are the other answers wrong?
+
+-   [ ] B. Network Load Balancers do not support host headers.
+-   [ ] D. Global Accelerator is for performance, not content versioning. NLBs don't support host-based routing.
+-   [ ] E. Global Accelerator is for performance, not content versioning. NLBs don't support path-based routing.
+
+Therefore, options A and C are correct.
+
+</details>
+<details>
+  <summary>Question 262</summary>
+
+A company plans to use Amazon ElastiCache for its multi-tier web application. A solutions architect creates a Cache VPC for the ElastiCache cluster and an App VPC for the application's Amazon EC2 instances. Both VPCs are in the us-east-1 Region.
+
+The solutions architect must implement a solution to provide the application's EC2 instances with access to the ElastiCache cluster. Which solution will meet these requirements MOST cost-effectively?
+
+-   [ ] A. Create a peering connection between the VPCs. Add a route table entry for the peering connection in both VPCs. Configure an inbound rule for the ElastiCache cluster's security group to allow inbound connection from the application's security group.
+-   [ ] B. Create a Transit VPC. Update the VPC route tables in the Cache VPC and the App VPC to route traffic through the Transit VPC. Configure an inbound rule for the ElastiCache cluster's security group to allow inbound connection from the application's security group.
+-   [ ] C. Create a peering connection between the VPCs. Add a route table entry for the peering connection in both VPCs. Configure an inbound rule for the peering connection's security group to allow inbound connection from the application's security group.
+-   [ ] D. Create a Transit VPC. Update the VPC route tables in the Cache VPC and the App VPC to route traffic through the Transit VPC. Configure an inbound rule for the Transit VPC's security group to allow inbound connection from the application's security group.
+   
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Create a peering connection between the VPCs. Add a route table entry for the peering connection in both VPCs. Configure an inbound rule for the ElastiCache cluster's security group to allow inbound connection from the application's security group.
+   
+Why these are the correct answers:
+
+A. Create a peering connection between the VPCs. Add a route table entry for the peering connection in both VPCs. Configure an inbound rule for the ElastiCache cluster's security group to allow inbound connection from the application's security group.
+
+-   [ ] VPC peering is the simplest and most cost-effective way to connect two VPCs.
+-   [ ] Route table entries enable traffic flow.
+-   [ ] Security groups control access to ElastiCache.
+   
+Why are the other answers wrong?
+
+-   [ ] B. Transit VPC is more complex and expensive for only two VPCs.
+-   [ ] C. Security groups of ElastiCache, not peering, control access to ElastiCache.
+-   [ ] D. Transit VPC is more complex and expensive than peering.
+
+Therefore, Option A is the correct solution.
+
+</details>
+<details>
+  <summary>Question 263</summary>
+
+A company is building an application that consists of several microservices. The company has decided to use container technologies to deploy its software on AWS. The company needs a solution that minimizes the amount of ongoing effort for maintenance and scaling. The company cannot manage additional infrastructure. Which combination of actions should a solutions architect take to meet these requirements? (Choose two.)
+
+-   [ ] A. Deploy an Amazon Elastic Container Service (Amazon ECS) cluster.
+-   [ ] B. Deploy the Kubernetes control plane on Amazon EC2 instances that span multiple Availability Zones.
+-   [ ] C. Deploy an Amazon Elastic Container Service (Amazon ECS) service with an Amazon EC2 launch type. Specify a desired task number level of greater than or equal to 2.
+-   [ ] D. Deploy an Amazon Elastic Container Service (Amazon ECS) service with a Fargate launch type. Specify a desired task number level of greater than or equal to 2.
+-   [ ] E. Deploy Kubernetes worker nodes on Amazon EC2 instances that span multiple Availability Zones. Create a deployment that specifies two or more replicas for each microservice.
+   
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Deploy an Amazon Elastic Container Service (Amazon ECS) cluster.
+-   [ ] D. Deploy an Amazon Elastic Container Service (Amazon ECS) service with a Fargate launch type. Specify a desired task number level of greater than or equal to 2.
+   
+Why these are the correct answers:
+
+A. Deploy an Amazon Elastic Container Service (Amazon ECS) cluster.
+
+-   [ ] ECS is a managed container orchestration service.
+   
+D. Deploy an Amazon Elastic Container Service (Amazon ECS) service with a Fargate launch type. Specify a desired task number level of greater than or equal to 2.
+
+-   [ ] Fargate removes the need to manage underlying infrastructure.
+-   [ ] Specifying at least two tasks ensures high availability.
+   
+Why are the other answers wrong?
+
+-   [ ] B. Managing the Kubernetes control plane adds operational overhead.
+-   [ ] C. EC2 launch type requires managing EC2 instances.
+-   [ ] E. Managing Kubernetes worker nodes adds operational overhead.
+
+Therefore, options A and D are correct.
+
+</details>
+<details>
+  <summary>Question 264</summary>
+
+A company has a web application hosted over 10 Amazon EC2 instances with traffic directed by Amazon Route 53. The company occasionally experiences a timeout error when attempting to browse the application. The networking team finds that some DNS queries return IP addresses of unhealthy instances, resulting in the timeout error. What should a solutions architect implement to overcome these timeout errors?
+
+-   [ ] A. Create a Route 53 simple routing policy record for each EC2 instance. Associate a health check with each record.
+-   [ ] B. Create a Route 53 failover routing policy record for each EC2 instance. Associate a health check with each record.
+-   [ ] C. Create an Amazon CloudFront distribution with EC2 instances as its origin. Associate a health check with the EC2 instances.
+-   [ ] D. Create an Application Load Balancer (ALB) with a health check in front of the EC2 instances. Route to the ALB from Route 53.
+   
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] D. Create an Application Load Balancer (ALB) with a health check in front of the EC2 instances. Route to the ALB from Route 53.
+   
+Why these are the correct answers:
+
+D. Create an Application Load Balancer (ALB) with a health check in front of the EC2 instances. Route to the ALB from Route 53.
+
+-   [ ] ALB health checks ensure traffic is routed only to healthy instances.
+-   [ ] Route 53 directs traffic to the ALB.
+   
+Why are the other answers wrong?
+
+-   [ ] A. Simple routing does not provide health checks.
+-   [ ] B. Failover routing is for disaster recovery, not load balancing.
+-   [ ] C. CloudFront is for caching, not load balancing with health checks.
+
+Therefore, Option D is the correct solution.
+
+</details>
+<details>
+  <summary>Question 265</summary>
+
+A solutions architect needs to design a highly available application consisting of web, application, and database tiers. HTTPS content delivery should be as close to the edge as possible, with the least delivery time. Which solution meets these requirements and is MOST secure?
+
+-   [ ] A. Configure a public Application Load Balancer (ALB) with multiple redundant Amazon EC2 instances in public subnets. Configure Amazon CloudFront to deliver HTTPS content using the public ALB as the origin.
+-   [ ] B. Configure a public Application Load Balancer with multiple redundant Amazon EC2 instances in private subnets. Configure Amazon CloudFront to deliver HTTPS content using the EC2 instances as the origin.
+-   [ ] C. Configure a public Application Load Balancer (ALB) with multiple redundant Amazon EC2 instances in private subnets. Configure Amazon CloudFront to deliver HTTPS content using the public ALB as the origin.
+-   [ ] D. Configure a public Application Load Balancer with multiple redundant Amazon EC2 instances in public subnets. Configure Amazon CloudFront to deliver HTTPS content using the EC2 instances as the origin.
+   
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] C. Configure a public Application Load Balancer (ALB) with multiple redundant Amazon EC2 instances in private subnets. Configure Amazon CloudFront to deliver HTTPS content using the public ALB as the origin.
+   
+Why these are the correct answers:
+
+C. Configure a public Application Load Balancer (ALB) with multiple redundant Amazon EC2 instances in private subnets. Configure Amazon CloudFront to deliver HTTPS content using the public ALB as the origin.
+
+-   [ ] CloudFront delivers content close to users (edge locations).
+-   [ ] ALB distributes traffic to EC2 instances.
+-   [ ] Private subnets secure EC2 instances.
+   
+Why are the other answers wrong?
+
+-   [ ] A. EC2 instances in public subnets are less secure.
+-   [ ] B. CloudFront needs a public endpoint like an ALB, not EC2 instances directly. EC2 instances in private subnets can't be directly accessed from the internet.
+-   [ ] D. EC2 instances in public subnets are less secure, and CloudFront needs a public endpoint.
+
+Therefore, Option C is the correct solution.
+
+</details>
+<details>
+  <summary>Question 266</summary>
+
+A company has a popular gaming platform running on AWS. The application is sensitive to latency because latency can impact the user experience and introduce unfair advantages to some players. The application is deployed in every AWS Region. It runs on Amazon EC2 instances that are part of Auto Scaling groups configured behind Application Load Balancers (ALBs). A solutions architect needs to implement a mechanism to monitor the health of the application and redirect traffic to healthy endpoints. Which solution meets these requirements?
+
+-   [ ] A. Configure an accelerator in AWS Global Accelerator. Add a listener for the port that the application listens on, and attach it to a Regional endpoint in each Region. Add the ALB as the endpoint.
+-   [ ] B. Create an Amazon CloudFront distribution and specify the ALB as the origin server. Configure the cache behavior to use origin cache headers. Use AWS Lambda functions to optimize the traffic.
+-   [ ] C. Create an Amazon CloudFront distribution and specify Amazon S3 as the origin server. Configure the cache behavior to use origin cache headers. Use AWS Lambda functions to optimize the traffic.
+-   [ ] D. Configure an Amazon DynamoDB database to serve as the data store for the application. Create a DynamoDB Accelerator (DAX) cluster to act as the in-memory cache for DynamoDB hosting the application data.
+   
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Configure an accelerator in AWS Global Accelerator. Add a listener for the port that the application listens on, and attach it to a Regional endpoint in each Region. Add the ALB as the endpoint.
+   
+Why these are the correct answers:
+
+A. Configure an accelerator in AWS Global Accelerator. Add a listener for the port that the application listens on, and attach it to a Regional endpoint in each Region. Add the ALB as the endpoint.
+
+-   [ ] Global Accelerator improves performance by routing traffic to the nearest healthy endpoint.
+-   [ ] It monitors application health and redirects traffic away from unhealthy endpoints.
+   
+Why are the other answers wrong?
+
+-   [ ] B. CloudFront is for caching content, not for real-time traffic routing based on health.
+-   [ ] C. CloudFront with S3 is for static content, not dynamic application traffic.
+-   [ ] D. DynamoDB and DAX are for database performance, not application health and traffic routing.
+
+Therefore, Option A is the correct solution.
+
+</details>
+<details>
+  <summary>Question 267</summary>
+
+A company has one million users that use its mobile app. The company must analyze the data usage in near-real time. The company also must encrypt the data in near-real time and must store the data in a centralized location in Apache Parquet format for further processing. Which solution will meet these requirements with the LEAST operational overhead?
+
+-   [ ] A. Create an Amazon Kinesis data stream to store the data in Amazon S3. Create an Amazon Kinesis Data Analytics application to analyze the data. Invoke an AWS Lambda function to send the data to the Kinesis Data Analytics application.
+-   [ ] B. Create an Amazon Kinesis data stream to store the data in Amazon S3. Create an Amazon EMR cluster to analyze the data. Invoke an AWS Lambda function to send the data to the EMR cluster.
+-   [ ] C. Create an Amazon Kinesis Data Firehose delivery stream to store the data in Amazon S3. Create an Amazon EMR cluster to analyze the data.
+-   [ ] D. Create an Amazon Kinesis Data Firehose delivery stream to store the data in Amazon S3. Create an Amazon Kinesis Data Analytics application to analyze the data.
+   
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] D. Create an Amazon Kinesis Data Firehose delivery stream to store the data in Amazon S3. Create an Amazon Kinesis Data Analytics application to analyze the data.
+   
+Why these are the correct answers:
+
+D. Create an Amazon Kinesis Data Firehose delivery stream to store the data in Amazon S3. Create an Amazon Kinesis Data Analytics application to analyze the data.
+
+-   [ ] Kinesis Data Firehose can deliver data to S3 and convert it to Parquet.
+-   [ ] Kinesis Data Analytics can analyze data in near-real time.
+-   [ ] This is a managed solution with minimal overhead.
+   
+Why are the other answers wrong?
+
+-   [ ] A. Kinesis Data Streams and Lambda add complexity.
+-   [ ] B. EMR clusters add operational overhead.
+-   [ ] C. EMR clusters add operational overhead.
+
+Therefore, Option D is the correct solution.
+
+</details>
+<details>
+  <summary>Question 268</summary>
+
+A gaming company has a web application that displays scores. The application runs on Amazon EC2 instances behind an Application Load Balancer. The application stores data in an Amazon RDS for MySQL database. Users are starting to experience long delays and interruptions that are caused by database read performance. The company wants to improve the user experience while minimizing changes to the application's architecture. What should a solutions architect do to meet these requirements?
+
+-   [ ] A. Use Amazon ElastiCache in front of the database.
+-   [ ] B. Use RDS Proxy between the application and the database.
+-   [ ] C. Migrate the application from EC2 instances to AWS Lambda.
+-   [ ] D. Migrate the database from Amazon RDS for MySQL to Amazon DynamoDB.
+   
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Use Amazon ElastiCache in front of the database.
+   
+Why these are the correct answers:
+
+A. Use Amazon ElastiCache in front of the database.
+
+-   [ ] ElastiCache can cache frequently read data, reducing database load.
+-   [ ] This improves read performance with minimal changes to the application.
+   
+Why are the other answers wrong?
+
+-   [ ] B. RDS Proxy is for connection management, not caching.
+-   [ ] C. Migrating to Lambda requires significant application changes.
+-   [ ] D. Migrating to DynamoDB requires significant application changes.
+
+Therefore, Option A is the correct solution.
+
+</details>
+<details>
+  <summary>Question 269</summary>
+
+An ecommerce company has noticed performance degradation of its Amazon RDS based web application. The performance degradation is attributed to an increase in the number of read-only SQL queries triggered by business analysts. A solutions architect needs to solve the problem with minimal changes to the existing web application. What should the solutions architect recommend?
+
+-   [ ] A. Export the data to Amazon DynamoDB and have the business analysts run their queries.
+-   [ ] B. Load the data into Amazon ElastiCache and have the business analysts run their queries.
+-   [ ] C. Create a read replica of the primary database and have the business analysts run their queries.
+-   [ ] D. Copy the data into an Amazon Redshift cluster and have the business analysts run their queries.
+   
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] C. Create a read replica of the primary database and have the business analysts run their queries.
+   
+Why these are the correct answers:
+
+C. Create a read replica of the primary database and have the business analysts run their queries.
+
+-   [ ] Read replicas offload read queries from the primary database.
+-   [ ] This improves performance with minimal application changes.
+   
+Why are the other answers wrong?
+
+-   [ ] A. DynamoDB is not suitable for complex SQL queries.
+-   [ ] B. ElastiCache is for caching, not for running analytical queries.
+-   [ ] D. Redshift is for data warehousing and is overkill for simple read queries.
+
+Therefore, Option C is the correct solution.
+
+</details>
+<details>
+  <summary>Question 270</summary>
+
+A company is using a centralized AWS account to store log data in various Amazon S3 buckets. A solutions architect needs to ensure that the data is encrypted at rest before the data is uploaded to the S3 buckets. The data also must be encrypted in transit. Which solution meets these requirements?
+
+-   [ ] A. Use client-side encryption to encrypt the data that is being uploaded to the S3 buckets.
+-   [ ] B. Use server-side encryption to encrypt the data that is being uploaded to the S3 buckets.
+-   [ ] C. Create bucket policies that require the use of server-side encryption with S3 managed encryption keys (SSE-S3) for S3 uploads.
+-   [ ] D. Enable the security option to encrypt the S3 buckets through the use of a default AWS Key Management Service (AWS KMS) key.
+   
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+-   [ ] A. Use client-side encryption to encrypt the data that is being uploaded to the S3 buckets.
+   
+Why these are the correct answers:
+
+A. Use client-side encryption to encrypt the data that is being uploaded to the S3 buckets.
+
+-   [ ] Client-side encryption ensures data is encrypted before transit and at rest.
+   
+Why are the other answers wrong?
+
+-   [ ] B. Server-side encryption encrypts data at rest but not before transit.
+-   [ ] C. Bucket policies enforce encryption but don't encrypt data before transit.
+-   [ ] D. This option does not exist.
+
+Therefore, Option A is the correct solution.
+
+</details>
+
+<details>
+  <summary>Question 271</summary>
+
+A solutions architect observes that a nightly batch processing job is automatically scaled up for 1 hour before the desired Amazon EC2 capacity is reached. The peak capacity is the 'same every night and the batch jobs always start at 1 AM. The solutions architect needs to find a cost-effective solution that will allow for the desired EC2 capacity to be reached quickly and allow the Auto Scaling group to scale down after the batch jobs are complete. What should the solutions architect do to meet these requirements?
+
+- [ ] A. Increase the minimum capacity for the Auto Scaling group.
+- [ ] B. Increase the maximum capacity for the Auto Scaling group.
+- [ ] C. Configure scheduled scaling to scale up to the desired compute level.
+- [ ] D. Change the scaling policy to add more EC2 instances during each scaling operation.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] C. Configure scheduled scaling to scale up to the desired compute level.
+
+Why these are the correct answers:
+
+C. Configure scheduled scaling to scale up to the desired compute level.
+
+Why are the other answers wrong?
+
+- [ ] A. Increasing the minimum capacity would ensure that the desired number of instances are always running, not just during the batch job. This is not cost-effective.
+- [ ] B. Increasing the maximum capacity would not solve the problem of the delay in scaling up. It only sets a ceiling on how many instances can run.
+- [ ] D. Changing the scaling policy might help scale faster, but since the scaling is predictable, it is not the most cost-effective solution.
+</details>
+<details>
+  <summary>Question 272</summary>
+
+A company serves a dynamic website from a fleet of Amazon EC2 instances behind an Application Load Balancer (ALB). The website needs to support multiple languages to serve customers around the world. The website's architecture is running in the us-west-1 Region and is exhibiting high request latency for users that are located in other parts of the world. The website needs to serve requests quickly and efficiently regardless of a user's location. However, the company does not want to recreate the existing architecture across multiple Regions. What should a solutions architect do to meet these requirements?
+
+- [ ] A. Replace the existing architecture with a website that is served from an Amazon S3 bucket. Configure an Amazon CloudFront distribution with the S3 bucket as the origin. Set the cache behavior settings to cache based on the Accept-Language request header.
+- [ ] B. Configure an Amazon CloudFront distribution with the ALB as the origin. Set the cache behavior settings to cache based on the Accept-Language request header.
+- [ ] C. Create an Amazon API Gateway API that is integrated with the ALB. Configure the API to use the HTTP integration type. Set up an API Gateway stage to enable the API cache based on the Accept-Language request header.
+- [ ] D. Launch an EC2 instance in each additional Region and configure NGINX to act as a cache server for that Region. Put all the EC2 instances and the ALB behind an Amazon Route 53 record set with a geolocation routing policy.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Configure an Amazon CloudFront distribution with the ALB as the origin. Set the cache behavior settings to cache based on the Accept-Language request header.
+
+Why these are the correct answers:
+
+B. Configure an Amazon CloudFront distribution with the ALB as the origin. Set the cache behavior settings to cache based on the Accept-Language request header.
+
+Why are the other answers wrong?
+
+- [ ] A. Replacing the architecture with S3 would only work for static content, not a dynamic website.
+- [ ] C. API Gateway is not designed for caching web content like CloudFront.
+- [ ] D. Launching EC2 instances in each region is complex and expensive compared to using CloudFront.
+</details>
+<details>
+  <summary>Question 273</summary>
+
+A rapidly growing ecommerce company is running its workloads in a single AWS Region. A solutions architect must create a disaster recovery (DR) strategy that includes a different AWS Region. The company wants its database to be up to date in the DR Region with the least possible latency. The remaining infrastructure in the DR Region needs to run at reduced capacity and must be able to scale up if necessary. Which solution will meet these requirements with the LOWEST recovery time objective (RTO)?
+
+- [ ] A. Use an Amazon Aurora global database with a pilot light deployment.
+- [ ] B. Use an Amazon Aurora global database with a warm standby deployment.
+- [ ] C. Use an Amazon RDS Multi-AZ DB instance with a pilot light deployment.
+- [ ] D. Use an Amazon RDS Multi-AZ DB instance with a warm standby deployment.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Use an Amazon Aurora global database with a warm standby deployment.
+
+Why these are the correct answers:
+
+B. Use an Amazon Aurora global database with a warm standby deployment.
+
+Why are the other answers wrong?
+
+- [ ] A. Pilot light has a higher RTO because you need to scale up resources in the DR region.
+- [ ] C. RDS Multi-AZ is within a single region, not for cross-region DR.
+- [ ] D. RDS Multi-AZ is for high availability within a region, not DR across regions.
+</details>
+<details>
+  <summary>Question 274</summary>
+
+A company runs an application on Amazon EC2 instances. The company needs to implement a disaster recovery (DR) solution for the application. The DR solution needs to have a recovery time objective (RTO) of less than 4 hours. The DR solution also needs to use the fewest possible AWS resources during normal operations. Which solution will meet these requirements in the MOST operationally efficient way?
+
+- [ ] A. Create Amazon Machine Images (AMIs) to back up the EC2 instances. Copy the AMIs to a secondary AWS Region. Automate infrastructure deployment in the secondary Region by using AWS Lambda and custom scripts.
+- [ ] B. Create Amazon Machine Images (AMIs) to back up the EC2 instances. Copy the AMIs to a secondary AWS Region. Automate infrastructure deployment in the secondary Region by using AWS CloudFormation.
+- [ ] C. Launch EC2 instances in a secondary AWS Region. Keep the EC2 instances in the secondary Region active at all times.
+- [ ] D. Launch EC2 instances in a secondary Availability Zone. Keep the EC2 instances in the secondary Availability Zone active at all times.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Create Amazon Machine Images (AMIs) to back up the EC2 instances. Copy the AMIs to a secondary AWS Region. Automate infrastructure deployment in the secondary Region by using AWS CloudFormation.
+
+Why these are the correct answers:
+
+B. Create Amazon Machine Images (AMIs) to back up the EC2 instances. Copy the AMIs to a secondary AWS Region. Automate infrastructure deployment in the secondary Region by using AWS CloudFormation.
+
+Why are the other answers wrong?
+
+- [ ] A. Using Lambda and custom scripts adds operational overhead compared to CloudFormation.
+- [ ] C. Keeping EC2 instances active in the DR region at all times is costly.
+- [ ] D. Using a secondary Availability Zone is for high availability, not cross-region DR.
+</details>
+<details>
+  <summary>Question 275</summary>
+
+A company runs an internal browser-based application. The application runs on Amazon EC2 instances behind an Application Load Balancer. The instances run in an Amazon EC2 Auto Scaling group across multiple Availability Zones. The Auto Scaling group scales up to 20 instances during work hours, but scales down to 2 instances overnight. Staff are complaining that the application is very slow when the day begins, although it runs well by mid-morning. How should the scaling be changed to address the staff complaints and keep costs to a minimum?
+
+- [ ] A. Implement a scheduled action that sets the desired capacity to 20 shortly before the office opens.
+- [ ] B. Implement a step scaling action triggered at a lower CPU threshold, and decrease the cooldown period.
+- [ ] C. Implement a target tracking action triggered at a lower CPU threshold, and decrease the cooldown period.
+- [ ] D. Implement a scheduled action that sets the minimum and maximum capacity to 20 shortly before the office opens.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] C. Implement a target tracking action triggered at a lower CPU threshold, and decrease the cooldown period.
+
+Why these are the correct answers:
+
+C. Implement a target tracking action triggered at a lower CPU threshold, and decrease the cooldown period.
+
+Why are the other answers wrong?
+
+- [ ] A. Scheduled actions don't respond to actual demand, just time.
+- [ ] B. Step scaling is less smooth than target tracking.
+- [ ] D. Setting min/max to 20 is costly; target tracking adjusts based on load.
+</details>
+<details>
+  <summary>Question 276</summary>
+
+A company has a multi-tier application deployed on several Amazon EC2 instances in an Auto Scaling group. An Amazon RDS for Oracle instance is the application' s data layer that uses Oracle-specific PL/SQL functions. Traffic to the application has been steadily increasing. This is causing the EC2 instances to become overloaded and the RDS instance to run out of storage. The Auto Scaling group does not have any scaling metrics and defines the minimum healthy instance count only. The company predicts that traffic will continue to increase at a steady but unpredictable rate before leveling off. What should a solutions architect do to ensure the system can automatically scale for the increased traffic? (Choose two.)
+
+- [ ] A. Configure storage Auto Scaling on the RDS for Oracle instance.
+- [ ] B. Migrate the database to Amazon Aurora to use Auto Scaling storage.
+- [ ] C. Configure an alarm on the RDS for Oracle instance for low free storage space.
+- [ ] D. Configure the Auto Scaling group to use the average CPU as the scaling metric.
+- [ ] E. Configure the Auto Scaling group to use the average free memory as the scaling metric.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. Configure storage Auto Scaling on the RDS for Oracle instance.
+- [ ] D. Configure the Auto Scaling group to use the average CPU as the scaling metric.
+
+Why these are the correct answers:
+
+A. Configure storage Auto Scaling on the RDS for Oracle instance.
+D. Configure the Auto Scaling group to use the average CPU as the scaling metric.
+
+Why are the other answers wrong?
+
+- [ ] B. Migrating to Aurora is a big change, not just scaling.
+- [ ] C. An alarm notifies, but Auto Scaling acts automatically.
+- [ ] E. CPU is a better metric for web servers than memory.
+</details>
+<details>
+  <summary>Question 277</summary>
+
+A company provides an online service for posting video content and transcoding it for use by any mobile platform. The application architecture uses Amazon Elastic File System (Amazon EFS) Standard to collect and store the videos so that multiple Amazon EC2 Linux instances can access the video content for processing. As the popularity of the service has grown over time, the storage costs have become too expensive. Which storage solution is MOST cost-effective?
+
+- [ ] A. Use AWS Storage Gateway for files to store and process the video content.
+- [ ] B. Use AWS Storage Gateway for volumes to store and process the video content.
+- [ ] C. Use Amazon EFS for storing the video content. Once processing is complete, transfer the files to Amazon Elastic Block Store (Amazon EBS).
+- [ ] D. Use Amazon S3 for storing the video content. Move the files temporarily over to an Amazon Elastic Block Store (Amazon EBS) volume attached to the server for processing.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] D. Use Amazon S3 for storing the video content. Move the files temporarily over to an Amazon Elastic Block Store (Amazon EBS) volume attached to the server for processing.
+
+Why these are the correct answers:
+
+D. Use Amazon S3 for storing the video content. Move the files temporarily over to an Amazon Elastic Block Store (Amazon EBS) volume attached to the server for processing.
+
+Why are the other answers wrong?
+
+- [ ] A. Storage Gateway is for on-premises integration, not cost-effective here.
+- [ ] B. Storage Gateway volumes are block storage, not file storage.
+- [ ] C. EFS is expensive for large video storage. EBS is not suitable for sharing files between EC2 instances.
+</details>
+<details>
+  <summary>Question 278</summary>
+
+A company wants to create an application to store employee data in a hierarchical structured relationship. The company needs a minimum-latency response to high-traffic queries for the employee data and must protect any sensitive data. The company also needs to receive monthly email messages if any financial information is present in the employee data. Which combination of steps should a solutions architect take to meet these requirements? (Choose two.)
+
+- [ ] A. Use Amazon Redshift to store the employee data in hierarchies. Unload the data to Amazon S3 every month.
+- [ ] B. Use Amazon DynamoDB to store the employee data in hierarchies. Export the data to Amazon S3 every month.
+- [ ] C. Configure Amazon Macie for the AWS account. Integrate Macie with Amazon EventBridge to send monthly events to AWS Lambda.
+- [ ] D. Use Amazon Athena to analyze the employee data in Amazon S3. Integrate Athena with Amazon QuickSight to publish analysis dashboards and share the dashboards with users.
+- [ ] E. Configure Amazon Macie for the AWS account. Integrate Macie with Amazon EventBridge to send monthly notifications through an Amazon Simple Notification Service (Amazon SNS) subscription.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] B. Use Amazon DynamoDB to store the employee data in hierarchies. Export the data to Amazon S3 every month.
+- [ ] E. Configure Amazon Macie for the AWS account. Integrate Macie with Amazon EventBridge to send monthly notifications through an Amazon Simple Notification Service (Amazon SNS) subscription.
+
+Why these are the correct answers:
+
+B. Use Amazon DynamoDB to store the employee data in hierarchies. Export the data to Amazon S3 every month.
+E. Configure Amazon Macie for the AWS account. Integrate Macie with Amazon EventBridge to send monthly notifications through an Amazon Simple Notification Service (Amazon SNS) subscription.
+
+Why are the other answers wrong?
+
+- [ ] A. Redshift is for analytics, not low-latency queries.
+- [ ] C. Lambda is not needed to send email notifications.
+- [ ] D. Athena/QuickSight is for analysis, not storing data.
+</details>
+<details>
+  <summary>Question 279</summary>
+
+A company has an application that is backed by an Amazon DynamoDB table. The company's compliance requirements specify that database backups must be taken every month, must be available for 6 months, and must be retained for 7 years. Which solution will meet these requirements?
+
+- [ ] A. Create an AWS Backup plan to back up the DynamoDB table on the first day of each month. Specify a lifecycle policy that transitions the backup to cold storage after 6 months. Set the retention period for each backup to 7 years.
+- [ ] B. Create a DynamoDB on-demand backup of the DynamoDB table on the first day of each month. Transition the backup to Amazon S3 Glacier Flexible Retrieval after 6 months. Create an S3 Lifecycle policy to delete backups that are older than 7 years.
+- [ ] C. Use the AWS SDK to develop a script that creates an on-demand backup of the DynamoDB table. Set up an Amazon EventBridge rule that runs the script on the first day of each month. Create a second script that will run on the second day of each month to transition DynamoDB backups that are older than 6 months to cold storage and to delete backups that are older than 7 years.
+- [ ] D. Use the AWS CLI to create an on-demand backup of the DynamoDB table. Set up an Amazon EventBridge rule that runs the command on the first day of each month with a cron expression. Specify in the command to transition the backups to cold storage after 6 months and to delete the backups after 7 years.
+
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] A. Create an AWS Backup plan to back up the DynamoDB table on the first day of each month. Specify a lifecycle policy that transitions the backup to cold storage after 6 months. Set the retention period for each backup to 7 years.
+
+Why these are the correct answers:
+
+A. Create an AWS Backup plan to back up the DynamoDB table on the first day of each month. Specify a lifecycle policy that transitions the backup to cold storage after 6 months. Set the retention period for each backup to 7 years.
+
+Why are the other answers wrong?
+
+- [ ] B. DynamoDB backups are not directly transitioned to S3 Glacier.
+- [ ] C. Using scripts adds complexity compared to AWS Backup.
+- [ ] D. AWS CLI is less efficient than AWS Backup for managing backups and lifecycle.
+</details>
 
 
 
